# chatgpt_to_md

./: LICENSE  README.md  pyproject.toml
src/chatgpt_to_md/: __init__.py  core.py
