[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-to-md"
version = "0.1.0"
description = "将ChatGPT导出的对话转换为Markdown文件"
authors = [
    {name = "toke648", email = "tim16673802@email.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["chatgpt", "markdown", "export", "converter"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/toke648/chatgpt-to-md"

[project.scripts]
chatgpt-to-md = "chatgpt_to_md.core:main"